[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extractsub"
version = "1.0.0"
description = "Extract embedded subtitles from MKV files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tabulate",
    "tqdm",
]

[project.scripts]
extractsub = "extractsub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
